# fast-api-template

./: .gitignore  README.md  pyproject.toml
src/: .env.template  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_03_15_1936-49f611f04a6a_create_users_table.py  2025_03_15_1948-9562ff636154_create_users_table.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  users.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  user.py
src/core/schemas/: user.py
src/crud/: users.py
src/utils/: __init__.py
temp/: docker-compose.yml
